<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/parent_address_book"
	android:weightSum="1"
	android:background="@drawable/back">


    <ScrollView
        android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/address_book">
                <!--elements inserted dynamically-->
        </LinearLayout>
    </ScrollView>

	<Button
	android:text="Add Address"
	android:id="@+id/addAddress"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	android:background="@drawable/buttons"
	android:textColor="#f5f5f5"
	/>

</LinearLayout>